--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .inline-block {
     display: inline-block;
     vertical-align: top;
@@ -6,6 +10,10 @@
     width: 23%;
     padding: 1%;
     text-align: center;
+}
+.imglogo {
+    width: 200px;
+    height: 200px;
 }
 .nav {
     width: 73%;
@@ -23,9 +31,18 @@
     width: 500px;
     margin: 0 auto;
 }
+img {
+    width: 440px;
+    height: 440px;
+}
+button {
+    padding: 10px;
+    margin: 20px;
+}
 .footer {
     background-color: #373738;
     padding: 1%;
+    color: white;
 }
 .footer ul {
     display: inline-block;
