--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,22 +6,28 @@ body {
     display: inline-block;
     vertical-align: top;
 }
-.logo {
-    width: 23%;
-    padding: 1%;
-    text-align: center;
+header {
+    display: flex;
 }
 .imglogo {
     width: 200px;
     height: 200px;
 }
-.nav {
-    width: 73%;
-    padding: 1%;
+nav {
+    width: 100%;
+    padding: 0;
+    display: flex;
 }
-.ul {
-    width: 50%;
-    margin-left: auto;
+nav ul {
+    list-style: none;
+    padding-left: 0;
+    position: relative;
+    top: 70px;
+    left: 30px;
+}
+nav ul li {
+    display: inline-block;
+    margin-right: 20px;
 }
 .heroImg {
     height: 600px;
